--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 400px;
+    justify-content: space-around;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    width: 500px;
+}
+
 button {
     padding: 15px;
     border: 0;
@@ -5,9 +26,17 @@ button {
     font-weight: bold;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 #popup {
     background-color: royalblue;
     color: yellow;
+}
+
+#popup:hover {
+    background-color: rgb(42, 64, 130);
 }
 
 .blackb {
@@ -15,12 +44,24 @@ button {
     color: yellow;
 }
 
+.blackb:hover {
+    background-color: rgb(37, 35, 35);
+}
+
 .randomb {
     background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, red);
     color: white;
 }
 
+.randomb:hover {
+    color: black;
+}
+
 .resetb {
     background-color: rgb(172, 35, 35);
     color: yellow;
+}
+
+.resetb:hover {
+    background-color: rgb(195, 68, 68);
 }
