--- a/style.css
+++ b/style.css
@@ -11,12 +11,14 @@ body {
     align-items: center;
     width: 400px;
     justify-content: space-around;
+    margin-bottom: 20px;
 }
 
 .footer {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 500px;
+    margin-top: 20px;
 }
 
 button {
@@ -64,4 +66,11 @@ button:hover {
 
 .resetb:hover {
     background-color: rgb(195, 68, 68);
+}
+
+.board {
+    height: 500px;
+    width: 500px;
+    display: grid;
+    border: 1px solid black;
 }
